--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -241,7 +241,8 @@ under the License.
               Page.new('Backup', 'backup-guide.html', []),
               Page.new('Backup using Replication', 'backup-guide-using-replication.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
-              Page.new('Design document management', 'design_document_management.html', [])
+              Page.new('Design document management', 'design_document_management.html', []),
+              Page.new('Warehousing', 'warehousing.html', [])
             ])
           ].each { |page|
             %>
