--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,7 +29,9 @@ under the License.
     <%= stylesheet_link_tag "screen", media: 'screen' %>
     <%= stylesheet_link_tag "typeahead", media: 'screen' %>
     <%= stylesheet_link_tag "print", media: 'print' %>
-    
+    <% if current_page.data.thebe %>
+      <%= stylesheet_link_tag "libraries", media: 'screen' %>
+    <% end %>
     <%= javascript_include_tag  "all" %>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
@@ -236,6 +238,7 @@ under the License.
             ]),
             Page.new('Guides', 'guides.html', [
               Page.new('JSON', 'json.html', []),
+              Page.new('Querying data', 'querying.html', []),
               Page.new('Replication', 'replication_guide.html', []),
               Page.new('Managing tasks', 'managing_tasks.html', []),
               Page.new('Document versioning and conflicts', 'mvcc.html', []),
@@ -321,5 +324,39 @@ under the License.
         </div>
       </div>
     </div>
+    <% if current_page.data.thebe %>
+      <script src="//storage.googleapis.com/kimstebel-public/thebe/static/main-built.js" type="text/javascript" charset="utf-8"></script>
+      <script type="text/javascript" >
+        $(function() {
+          function startThebe(url) {
+            new Thebe({
+              url: url,
+  		        selector: 'pre.thebe',
+              tmpnb_mode: true,
+              kernel_name: '<%= current_page.data.thebe.kernel_name %>',
+  		        debug: true,
+            	image_name: 'kimstebel/thebe-demo-notebook',
+  	          inject_css: true,
+              load_mathjax: false,
+              codemirror_mode_name: '<%= current_page.data.thebe.codemirror_mode_name %>'
+            });
+          }
+          $.ajax('https://tmpnb2.kimstebel.com:8000/api/stats', {
+            success: function(data) {
+              if (data.available > 0) {
+                startThebe('https://tmpnb2.kimstebel.com:8000');
+              } else {
+                startThebe('https://tmpnb.kimstebel.com:8000');
+              }
+            },
+            error: function() {
+              startThebe('https://tmpnb.kimstebel.com:8000');
+            },
+            dataType: 'json',
+            timeout: 2000
+          });
+        });
+      </script>
+    <% end %>
   </body>
 </html>
