--- a/source/stylesheets/libraries.css.scss
+++ b/source/stylesheets/libraries.css.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import 'variables';
+@import 'compass';
 
 .content {
   pre, blockquote {
@@ -7,39 +8,18 @@
     top: 0;
     margin: 10px 60px 10px 40px;
     width: auto;
-    border-radius: 0;
+    border-radius: 10px;
     padding: 10px;
-    box-sizing: border-box;
-    color: #000;
-  }
-
-  pre.highlight .c, pre.highlight .cm, pre.highlight .c1, pre.highlight .cs {
-    color: #333;
-  }
-
-  code {
-    color: #000;
-  }
-
-  pre, pre.highlight, pre.highlight .w {
-    background-color: #fff;
-  }
-
-  pre.highlight:last-of-type {
-    border: none;
-  }
-
-  pre.javascript {
-    display:block;
+    @include box-sizing(border-box);
   }
   blockquote {
     border-top: 0;
   }
-  
+
   blockquote:before {
     display:none;
   }
-  
+
   h1,h2,h3,h4,h5,p,table,ul,ol,aside,dl {
     margin-right: 20px;
   }
@@ -51,14 +31,14 @@
 
 #expand-collapse-code {
   display: none;
-}  
-  
+}
+
 .thebe_controls button {
   width: auto;
   height: auto;
   border-radius: 10px;
   position: relative;
-  margin: 0 20px 20px 0px;
+  margin: 10px 20px 20px 0px;
   border-width: 1px;
   border-color: #888;
   border-style: solid;
@@ -69,7 +49,7 @@
   font-weight: bold;
 }
 
-.output_prompt, .output_result {
+.output_prompt {
   display:none;
 }
 
@@ -91,3 +71,13 @@ div.thebe_wrap {
   margin: 0 40px;
 }
 
+div#searchbox input {
+  margin-top: -5px;
+}
+
+.content pre.thebe {
+  padding-top: 4px;
+  padding-left: 74px;
+  background-color: white;
+  color: black;
+}
