--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,6 +48,7 @@ under the License.
     <script type="text/javascript">
 
       $(document).ready(function() {
+        var contentTags = ['h1', 'h2', 'h3', 'h4', 'h5', 'p', 'ul', 'ol', 'aside', 'dl'];
         function hideCode() {
           $.cookie('hide-code-column', 'true');
           var hash = window.location.hash;
@@ -58,7 +59,6 @@ under the License.
           $('#hideCodeButton').hide();
           $('#showCodeButton').show();
           $('#expand-collapse-code').toggleClass('hide-code-column');
-          var contentTags = ['h1', 'h2', 'h3', 'h4', 'h5', 'p', 'table', 'ul', 'ol', 'aside', 'dl'];
           for (var i in contentTags) {
             $('.content > ' + contentTags[i]).css('margin-right', '20px');
           }
@@ -87,7 +87,6 @@ under the License.
           $('#hideCodeButton').show();
           $('#showCodeButton').hide();
           $('#expand-collapse-code').toggleClass('hide-code-column');
-          var contentTags = ['h1', 'h2', 'h3', 'h4', 'h5', 'p', 'table', 'ul', 'ol', 'aside', 'dl'];
           for (var i in contentTags) {
             $('.content > ' + contentTags[i]).css('margin-right', '50%');
           }
