--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -200,7 +200,7 @@ under the License.
               Page.new('JSON', 'basics.html#json', []),
               Page.new('Distributed', 'basics.html#distributed', []),
               Page.new('Replication', 'basics.html#replication', []),
-              Page.new('Versions of Cloudant', 'versions_cloudant.html#versions-cloudant', [])
+              Page.new('Versions of Cloudant', 'versions_cloudant.html#versions-cloudant', []),
               	Page.new('Cloudant Local', 'cloudant_local.html#cloudant-local', []),
               	Page.new('Cloudant on Bluemix Local', 'cloudant_bluemix_local.html#cloudant-bluemix-local', [])
             ]),
