--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -200,7 +200,7 @@ under the License.
               Page.new('JSON', 'basics.html#json', []),
               Page.new('Distributed', 'basics.html#distributed', []),
               Page.new('Replication', 'basics.html#replication', []),
-              Page.new('Versions of Cloudant', 'versions_cloudant.html', [])
+              Page.new('Versions of Cloudant', 'basics.html#versions-cloudant', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
               Page.new('Supported', 'libraries.html#supported-client-libraries', []),
