--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -201,7 +201,7 @@ under the License.
               	Page.new('How do I find data?', 'basics.html#how-do-i-find-data?', []),
               	Page.new('Distributed', 'basics.html#distributed', []),
               	Page.new('Replication', 'basics.html#replication', []),
-              	Page.new('Versions of Cloudant', 'basics.html#versions-cloudant', [])
+              	Page.new('Versions of Cloudant', 'basics.html#versions-of-cloudant', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
               Page.new('Supported', 'libraries.html#supported-client-libraries', []),
