--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,6 +29,9 @@ under the License.
     <%= stylesheet_link_tag "screen", media: 'screen' %>
     <%= stylesheet_link_tag "typeahead", media: 'screen' %>
     <%= stylesheet_link_tag "print", media: 'print' %>
+    <% if current_page.data.thebe %>
+      <%= stylesheet_link_tag "libraries", media: 'screen' %>
+    <% end %>
     <%= javascript_include_tag  "all" %>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
@@ -48,6 +51,7 @@ under the License.
     <script type="text/javascript">
 
       $(document).ready(function() {
+        var contentTags = ['h1', 'h2', 'h3', 'h4', 'h5', 'p', 'ul', 'ol', 'aside', 'dl'];
         function hideCode() {
           $.cookie('hide-code-column', 'true');
           var hash = window.location.hash;
@@ -58,7 +62,6 @@ under the License.
           $('#hideCodeButton').hide();
           $('#showCodeButton').show();
           $('#expand-collapse-code').toggleClass('hide-code-column');
-          var contentTags = ['h1', 'h2', 'h3', 'h4', 'h5', 'p', 'table', 'ul', 'ol', 'aside', 'dl'];
           for (var i in contentTags) {
             $('.content > ' + contentTags[i]).css('margin-right', '20px');
           }
@@ -87,7 +90,6 @@ under the License.
           $('#hideCodeButton').show();
           $('#showCodeButton').hide();
           $('#expand-collapse-code').toggleClass('hide-code-column');
-          var contentTags = ['h1', 'h2', 'h3', 'h4', 'h5', 'p', 'table', 'ul', 'ol', 'aside', 'dl'];
           for (var i in contentTags) {
             $('.content > ' + contentTags[i]).css('margin-right', '50%');
           }
@@ -199,7 +201,7 @@ under the License.
               	Page.new('How do I find data?', 'basics.html#how-do-i-find-data?', []),
               	Page.new('Distributed', 'basics.html#distributed', []),
               	Page.new('Replication', 'basics.html#replication', []),
-              	Page.new('Versions of Cloudant', 'basics.html#versions-cloudant', [])
+              	Page.new('Versions of Cloudant', 'basics.html#versions-of-cloudant', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
               Page.new('Supported', 'libraries.html#supported-client-libraries', []),
@@ -230,6 +232,7 @@ under the License.
             ]),
             Page.new('Guides', 'guides.html', [
               Page.new('JSON', 'json.html', []),
+              Page.new('Querying data', 'querying.html', []),
               Page.new('Replication', 'replication_guide.html', []),
               Page.new('Managing tasks', 'managing_tasks.html', []),
               Page.new('Document versioning and conflicts', 'mvcc.html', []),
@@ -239,9 +242,13 @@ under the License.
               Page.new('Backup', 'backup-guide.html', []),
               Page.new('Backup using Replication', 'backup-guide-using-replication.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
-              Page.new('Design document management', 'design_document_management.html', [])
+              Page.new('Design document management', 'design_document_management.html', []),
+              Page.new('Warehousing', 'warehousing.html', [])
+            ]),
+            Page.new('Visual Guides', 'visual_guides.html', [
+              Page.new('Dashboard', 'dashboard.html', [])
             ])
-          ].each { |page| 
+          ].each { |page|
             %>
 <li class="tocify-item"><a href="<%=page.link%>"><%=page.name%></a>
 				    <%
@@ -315,5 +322,40 @@ under the License.
         </div>
       </div>
     </div>
+    <% if current_page.data.thebe %>
+      <script src="//storage.googleapis.com/kimstebel-public/thebe/static/main-built.js" type="text/javascript" charset="utf-8"></script>
+      <script type="text/javascript" >
+        $(function() {
+          function startThebe(url) {
+            new Thebe({
+              url: url,
+  		        selector: 'pre.thebe',
+              tmpnb_mode: true,
+              kernel_name: '<%= current_page.data.thebe.kernel_name %>',
+  		        debug: true,
+            	image_name: 'kimstebel/thebe-demo-notebook',
+  	          inject_css: true,
+              load_mathjax: false,
+              codemirror_mode_name: '<%= current_page.data.thebe.codemirror_mode_name %>'
+            });
+          }
+          var tmpnbHosts = ['https://tmpnb2.kimstebel.com:8000', 'https://tmpnb.kimstebel.com:8000'];
+          $.ajax(tmpnbHosts[0] + '/api/stats', {
+            success: function(data) {
+              if (data.available > 0) {
+                startThebe(tmpnbHosts[0]);
+              } else {
+                startThebe(tmpnbHosts[1]);
+              }
+            },
+            error: function() {
+              startThebe(tmpnbHosts[1]);
+            },
+            dataType: 'json',
+            timeout: 2000
+          });
+        });
+      </script>
+    <% end %>
   </body>
 </html>
