--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -245,6 +245,9 @@ under the License.
               Page.new('CouchApps', 'couchapps.html', []),
               Page.new('Design document management', 'design_document_management.html', []),
               Page.new('Warehousing', 'warehousing.html', [])
+            ]),
+            Page.new('Visual Guides', 'visual_guides.html', [
+              Page.new('Dashboard', 'dashboard.html', [])
             ])
           ].each { |page|
             %>
