--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -191,15 +191,16 @@ under the License.
               Page.new('Contents', 'index.html#contents', []),
               Page.new('Contribute', 'index.html#contribute', [])
             ]),
-              Page.new('Cloudant Basics', 'basics.html', [
-              	Page.new('Database as a Service', 'basics.html#database-as-a-service', []),
-              	Page.new('IBM Bluemix', 'basics.html#ibm-bluemix', []),
-              	Page.new('HTTP API', 'basics.html#http-api', []),
-              	Page.new('JSON', 'basics.html#json', []),
-              	Page.new('Distributed', 'basics.html#distributed', []),
-              	Page.new('Replication', 'basics.html#replication', []),
-              	Page.new('Versions of Cloudant', 'basics.html#versions-of-cloudant', []),
-              	Page.new('Cloud Consumption Model', 'ccm.html', [])
+			Page.new('Cloudant Offerings', 'offerings.html', [
+				Page.new('Database as a Service', 'offerings.html#database-as-a-service', []),
+				Page.new('IBM Bluemix', 'offerings.html#ibm-bluemix', []),
+				Page.new('Cloudant Local', 'offerings.html#cloudant-local', [])
+            ]),
+			Page.new('Cloudant Basics', 'basics.html', [
+				Page.new('HTTP API', 'basics.html#http-api', []),
+				Page.new('JSON', 'basics.html#json', []),
+				Page.new('Distributed Systems', 'basics.html#distributed', []),
+				Page.new('Replication', 'basics.html#replication', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
               Page.new('Supported', 'libraries.html#supported-client-libraries', []),
